<resources>
    <string name="app_name">Working App</string>
    <string name="password_indicator">Password</string>
    <string name="username_indicator">Username</string>
    <string name="login_indicator">Login</string>
    <string name="welcome">Welcome</string>
    <string name="question_reg">You will sign in as...</string>
    <string name="register_indicator">Sign in</string>
    <string name="have_account_indicator">Sign up!</string>
    <string name="employee_button">Employee</string>
    <string name="employer_button">Employer</string>
    <string name="error_empty_value">Sorry, a/some value(s) is/are required: %s</string>
    <string name="error_pasword">Both passwords do not coincide</string>
    <string name="error_invalid_value">Invalid value(s): %s</string>
    <string name="error_entry">Incorrect user or password</string>
    <string name="nameField">Name</string>
    <string name="lastNameField">Last name</string>
    <string name="username">Username</string>
    <string name="ageField">Age</string>
    <string name="countryField">Country</string>
    <string name="phoneField">Phone number</string>
    <string name="emailField">Email</string>
    <string name="passwordConfirm">Confirm your password</string>
    <string name="corporateField">Corporation</string>
    <string name="abilitiesField">Abilities</string>
    <string name="requisite">Requirements</string>
    <string name="apply_now">Apply now!!</string>
    <string name="work_loctate">Location</string>
    <string name="to_favorites">Applied works</string>
    <string name="logOut">Log out</string>
    <string name="rememberer">Stay logged in</string>
    <string name="inscri">Un-apply</string>
    <string name="all_works">All works</string>

</resources>