<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingStart="8dp"
    android:paddingTop="30dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical">
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/title_How"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/welcome"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/logscreen"
        android:textSize="80sp"/>

    <Button
        android:id="@+id/signUpButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/raleway_medium"
        android:onClick="toSignUp"
        android:padding="20dp"
        android:text="@string/register_indicator"
        android:textColor="#000000"
        android:textSize="25sp" />

    <Button
        android:id="@+id/signInButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/raleway_medium"
        android:onClick="toSignIn"
        android:padding="20dp"
        android:text="@string/have_account_indicator"
        android:textColor="#000000"
        android:textSize="25sp" />



</LinearLayout>