<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundRL"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/welcome"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/logscreen"
        android:textSize="80sp"/>

    <LinearLayout
        android:id="@+id/logscreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/style_form_login">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_above="@id/loginRL"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/avatar" />

        <LinearLayout
            android:id="@+id/loginRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/username_indicator"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:ems="10"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_indicator"
                android:fontFamily="@font/raleway_medium"
                android:textSize="25sp" />

            <EditText

                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:layout_margin="10dp"
                android:background="@color/background"
                android:inputType="textPassword"
                android:singleLine="true" />


        </LinearLayout>



        <Button
            android:id="@+id/loginButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="20dp"
            android:fontFamily="@font/raleway_medium"
            android:textColor="#000000"
            android:text="@string/login_indicator"
            android:textSize="25sp" />


    </LinearLayout>




</LinearLayout>