<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/splash"

    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_centerInParent="true"
        android:background="@drawable/style_form_taskwork"
        android:orientation="vertical"
        >


        <ImageView
            android:id="@+id/work_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo_wala"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorAccent"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:fontFamily="@font/raleway_medium"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/employer_button"
                android:textAllCaps="true"
                android:textSize="15dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/work_creator"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                tools:text="Romero Salazar"
                android:gravity="center"
                android:textSize="15dp"
                android:padding="10dp"
                android:textStyle="bold"
                android:fontFamily="@font/raleway_medium"/>


        </LinearLayout>

        <TextView
            android:id="@+id/work_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_medium"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="40dp"
            android:paddingEnd="10dp"
            android:paddingBottom="40dp"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:text="Reparadores de computadoras" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:fontFamily="@font/raleway_medium"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                tools:text="@string/corporateField" />

            <TextView
                android:id="@+id/work_where"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="Le Festin"/>
        </LinearLayout>

        <LinearLayout
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:fontFamily="@font/raleway_medium"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                tools:text="@string/requisite" />

            <TextView
                android:id="@+id/work_how"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:textStyle="bold"
                tools:text="Experiencia en Hardware y Software"/>
        </LinearLayout>

        <LinearLayout
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            >

            <TextView
                android:id="@+id/work_phone"
                android:fontFamily="@font/raleway_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:onClick="call"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic"
                tools:text="@string/phoneField" />

            <TextView
                android:fontFamily="@font/raleway_medium"
                android:id="@+id/work_map"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:gravity="center"
                android:onClick="map"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold|italic"
                tools:text="@string/work_loctate" />


        </LinearLayout>

        <Button
            android:id="@+id/applied"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fontFamily="@font/raleway_medium"
            android:text="@string/apply_now"/>

    </LinearLayout>

</RelativeLayout>